# p5js

./: PKG-INFO  README.md  pyproject.toml  setup.py
p5/: __init__.py  color.py  constants.py  core.py  corefunctions.py  drawcurve.py  math.py  settings.py  timedata.py  transform.py
