[tool.poetry]
name = "p5"
version = "0.0.814"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/gromko/p5js"
repository = "https://github.com/gromko/p5js"
description = "A package wrapping pygame functionality in p5.js calling conventions."
authors = ["Grygoriy Gromko <gr.gromko>@gmail.com>"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8.0"
pygame = "^2.1.2"
numpy = "<2.0.0,>=1.22.2"
multipledispatch = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
